<resources>
  <string name="app_name">eHealthSupermarket</string>


  <string name="home_label">Inicio</string>
  <string name="mylistLabel">Mis Listas</string>
  <string name="scanLabel">Escanear</string>
  <string name="intolerancesLabel">Intolerancias</string>
  <string name="accountLabel">Cuenta</string>
  <string name="productImage">Información del producto</string>
  <string name="intolerancesBased">Basados en tus intolerancias</string>
  <string name="similarIntolerances">Basados en perfiles similares al tuyo</string>
  <string name="favouritesProduct">Tus favoritos</string>
  <string name="allProduct">Todos los productos</string>
  <string name="recommendedProducts">Productos recomendados</string>
  <string name="list_add">Añadir lista</string>
  <string name="create_list">Crear una lista de compra</string>
  <string name="enter_name">"Nombre: "</string>
  <string name="enter_list_hint">Nombre de la lista</string>
  <string name="add_list">Añadir</string>
  <string name="cancel_list">Cancelar</string>
  <string name="close_text">X</string>
  <string name="show_more">Ver más...</string>
  <string name="show_all">VER TODO</string>
  <string name="product_information_1">Nota legal: Te recomendamos que siempre leas las etiquetas, advertencias e instrucciones del embalaje del producto antes de utilizarlo o consumirlo, ya que podrás encontrar información más detallada y actualizada sobre el mismo.</string>
  <string name="button_forgot_password">¿Has olvidado tu contraseña?</string>
  <string name="minimum_password">Contraseña demasiado corta, debe contener almenos 6 carácteres</string>
  <string name="auth_failed">Los datos no son correctos, revisa tu correo y contraseña o regístrate</string>

  <string name="all_products">Todos los productos:</string>
  <string name="title_activity_android_camera2_a_p_i">AndroidCamera2API</string>
  <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
  <string name="hello_world">Hello Square World!</string>
  <string name="no_products_based_in_intolerances">En este espacio se mostrarán productos basados en las intolerancias que sean configuradas en el apartado de intolerancias.</string>
  <string name="go_to_intolerances">Ir a intolerancias</string>
  <string name="no_products_favorites">En este espacio se mostrarán sus productos favoritos, para añadirlos, ve a la sección de escaneo de nuestra app.  </string>
  <string name="go_to_scanSection">Escanear</string>
  <string name="apto">Este producto es apto para ti</string>
  <string name="no_apto">Este producto no es apto para ti</string>
  <string name="discover_the_new">Descubre lo nuevo</string>
  <string name="content_rectangle1">content_rectangle1</string>
  <string name="content_rectangle2">content_rectangle2</string>
  <string name="contrasena">Contraseña</string>
  <string name="registrar">Registrar</string>
  <string name="ad_product_list">Add product</string>
  <string name="add_products_to_your_list">Añade productos a tu lista</string>
  <string name="est_seguro_que_desea_borrar_la_lista">¿Está seguro que desea borrar la lista?</string>
  <string name="remove_item">Borrar</string>
  <string name="predecir">Predecir</string>
  <string name="logo">Logo</string>
  <string name="ha_olvidado_su_contrase_a">¿Ha olvidado su contraseña?</string>
  <string name="entrar">Entrar</string>
  <string name="registrase">Registrase</string>
  <string name="email">Email</string>
  <string name="contrase_a">Contraseña</string>
  <string name="enviar_email">Enviar email</string>
  <string name="todo">TODO</string>
  <string name="registrarse">REGISTRAR</string>
  <string name="ya_tienes_una_cuenta_inicia_sesi_n">¿Ya tienes una cuenta? Inicia sesión.</string>
  <string name="Escaneo_con_IA">Escaneo con IA</string>
  <string name="escaneo_qr">Escaneo QR</string>
  <string name="escaneo_con_ia">Escaneo con IA</string>
  <string name="datos_personales">Datos personales</string>
  <string name="idioma">Idioma</string>
  <string name="ajustes">Ajustes</string>
  <string name="ayuda">Ayuda</string>
  <string name="sugerencias">Sugerencias</string>
  <string name="cerrar_sesi_n">Cerrar sesión</string>
  <string name="spanish">Spanish</string>
  <string name="english">English</string>
  <string name="volver">Volver</string>
  <string name="informaci_n_personal">Información personal</string>
  <string name="nombre">Nombre</string>
  <string name="m_vil">Móvil</string>
  <string name="direcci_n">Dirección</string>
  <string name="usuario">\@usuario</string>
  <string name="correo">Correo</string>
  <string name="Intolerancias">Intolerancias</string>
</resources>