<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home_label" />
    <item
        android:id="@+id/navigation_mylist"
        android:enabled="true"
        android:icon="@drawable/ic_list"
        android:title="@string/mylistLabel"/>

    <item
        android:id="@+id/navigation_scan"
        android:enabled="true"
        android:icon="@drawable/ic_scan"
        android:title="@string/scanLabel"/>

    <item
        android:id="@+id/navigation_intolerances"
        android:enabled="true"
        android:icon="@drawable/ic_intolerances"
        android:title="@string/intolerancesLabel"/>

    <item
        android:id="@+id/navigation_account"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:title="@string/accountLabel"/>
</menu>