<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".sections.account.LoginActivity">

  <ImageView
    android:id="@+id/logoImageView"
    android:layout_width="250dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:contentDescription="@string/logo"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.1"
    app:srcCompat="@mipmap/logo" />
  <EditText
    android:id="@+id/emailEditText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    android:inputType="textEmailAddress"
    app:layout_constraintTop_toBottomOf="@id/logoImageView"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:autofillHints="Esto es el problema" />

  <EditText
    android:id="@+id/passwordEditTextT"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="Contraseña"
    android:inputType="textPassword"
    android:hint="@string/contrase_a"
    app:layout_constraintTop_toBottomOf="@id/emailEditText" />

  <Button
    android:id="@+id/reset_button"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ha_olvidado_su_contrase_a"
    android:textColor="@color/purple_200"
    android:textSize="12sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/passwordEditTextT"
    tools:backgroundTint="@color/white" />
  <Button
    android:id="@+id/logInButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/customborder"
    android:text="@string/entrar"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/reset_button" />

  <Button
    android:id="@+id/signUpButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/registrase"
    app:layout_constraintTop_toBottomOf="@id/logInButton"
    app:layout_constraintStart_toStartOf="parent"
    style="@style/Widget.MaterialComponents.Button.TextButton"
    app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>