<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
      android:id="@+id/logoImageView"
      android:layout_width="250dp"
      android:layout_height="250dp"
      android:layout_gravity="center"
      android:contentDescription="@string/todo"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.1"
      app:srcCompat="@mipmap/logo" />
    <EditText
      android:id="@+id/emailEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      tools:layout_editor_absoluteX="10dp"
      tools:layout_editor_absoluteY="280dp"
      app:layout_constraintTop_toBottomOf="@id/logoImageView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:autofillHints=" " />
    <EditText
      android:id="@+id/passwordEditTextT"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/contrase_a"
      android:inputType="textPassword"
      tools:layout_editor_absoluteX="10dp"
      tools:layout_editor_absoluteY="325dp"
      app:layout_constraintTop_toBottomOf="@id/emailEditText"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:autofillHints=" " />
    <Button
      android:id="@+id/reset_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/customborder"
      android:text="@string/registrarse"
      android:textColor="@color/white"
      android:visibility="visible"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/passwordEditTextT" />
    <Button
      android:id="@+id/signIn_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/ya_tienes_una_cuenta_inicia_sesi_n"
      tools:layout_editor_absoluteX="10dp"
      tools:layout_editor_absoluteY="418dp"
      style="@style/Widget.MaterialComponents.Button.TextButton"
      app:layout_constraintTop_toBottomOf="@id/reset_button"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>