<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:id="@+id/popup_layout"
  android:layout_width="350dp"
  android:layout_height="200dp"
  android:layout_gravity="center"
  android:orientation="vertical">

  <Button
    android:id="@+id/btnAdd"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginEnd="15dp"
    android:layout_gravity="start"
    android:text="@string/add_list"
    android:textColor="@color/white"
    app:layout_constraintEnd_toStartOf="@id/btnCancel"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/name_of_list"></Button>


  <Button
    android:id="@+id/btnCancel"
    style="@style/Widget.MaterialComponents.Button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_gravity="end"
    android:layout_toEndOf="@+id/btnAdd"
    android:text="@string/cancel_list"
    android:textColor="@color/white"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@id/btnAdd"
    app:layout_constraintTop_toBottomOf="@id/name_of_list"></Button>


  <TextView
    android:id="@+id/txtclose"
    android:textStyle="bold"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_gravity="end"
    android:background="@drawable/cerclebackground"
    android:gravity="center"
    android:text="@string/close_text"
    android:textColor="@color/purple_500"
    app:layout_constraintEnd_toEndOf="@id/name_of_list"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintTop_toTopOf="parent"
    ></TextView>
  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/name_of_list"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/enter_list_hint"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/txtclose">

    <com.google.android.material.textfield.TextInputEditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

  </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>