<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">
    <ImageView
      android:id="@+id/logoImageView"
      android:layout_width="250dp"
      android:layout_height="250dp"
      android:layout_gravity="center"
      app:srcCompat="@mipmap/logo"
      tools:layout_editor_absoluteX="81dp"
      tools:layout_editor_absoluteY="30dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:contentDescription="@string/todo" />
    <EditText
      android:id="@+id/emailEditText"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ems="10"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      tools:layout_editor_absoluteX="10dp"
      tools:layout_editor_absoluteY="280dp"
      app:layout_constraintTop_toBottomOf="@id/logoImageView"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:autofillHints=" " />
    <Button
      android:id="@+id/reset_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@drawable/customborder"
      android:text="@string/enviar_email"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/emailEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>