<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="@string/appbar_scrolling_view_behavior"
  tools:context=".sections.account.ProfileActivity"
  tools:showIn="@layout/activity_profile">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
      style="@style/headerText"
      android:text="@string/informaci_n_personal"
      android:layout_marginBottom="20dp"/>

    <RelativeLayout style="@style/profileDetailsLayout"
      android:id="@+id/name_field">
      <ImageView
        android:id="@+id/nameImageView"
        android:src="@drawable/baseline_face_black_48dp"
        style="@style/profileDetailsImage" />

      <TextView
        android:id="@+id/nameTextView"
        android:text="@string/nombre"
        android:layout_toRightOf="@id/nameImageView"
        style="@style/profileDetailsTextMain" />

      <TextView
        android:text="@string/nombre"
        android:id="@+id/name_field_edit"
        android:layout_toRightOf="@id/nameImageView"
        style="@style/profileDetailsMiniText" />

    </RelativeLayout>

    <View style="@style/proifleDetailsView" />
    <RelativeLayout style="@style/profileDetailsLayout"
      android:id="@+id/mobile_field">
      <ImageView
        android:id="@+id/mobileImageView"
        android:src="@drawable/baseline_smartphone_black_48dp"
        style="@style/profileDetailsImage" />

      <TextView
        android:text="@string/m_vil"
        android:layout_toRightOf="@id/mobileImageView"
        style="@style/profileDetailsTextMain"/>

      <TextView
        android:text="666666666"
        android:layout_toRightOf="@id/mobileImageView"
        style="@style/profileDetailsMiniText"
        android:id="@+id/mobile_field_edit"/>

    </RelativeLayout>

    <View style="@style/proifleDetailsView" />
    <RelativeLayout style="@style/profileDetailsLayout"
      android:id="@+id/email_field">
      <ImageView
        android:id="@+id/emailImageView"
        android:src="@drawable/baseline_email_black_24dp"
        style="@style/profileDetailsImage" />

      <TextView
        android:text="Email"
        android:layout_toRightOf="@id/emailImageView"
        style="@style/profileDetailsTextMain" />

      <TextView
        android:text="admin@admin.com"
        android:layout_toRightOf="@id/emailImageView"
        style="@style/profileDetailsMiniText"
        android:id="@+id/email_field_edit"/>

    </RelativeLayout>

    <View style="@style/proifleDetailsView" />
    <RelativeLayout style="@style/profileDetailsLayout"
      android:id="@+id/direction_field">
      <ImageView
        android:id="@+id/addressImageView"
        android:src="@drawable/ic_intolerances"
        style="@style/profileDetailsImage" />

      <TextView
        android:id="@+id/intolerance_title"
        android:text="@string/Intolerancias"
        android:layout_toRightOf="@id/addressImageView"
        style="@style/profileDetailsTextMain" />

      <TextView
        android:text=" "
        android:layout_toRightOf="@id/addressImageView"
        android:layout_below="@+id/intolerance_title"
        style="@style/profileDetailsMiniText"
        android:id="@+id/direction_field_edit"/>

    </RelativeLayout>

    <View style="@style/proifleDetailsView" />

  </LinearLayout>

</androidx.core.widget.NestedScrollView>