<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:fitsSystemWindows="true"
  tools:context=".ProfileActivity"
  android:background="@color/profileBackground">

  <com.google.android.material.appbar.AppBarLayout
    android:id="@+id/app_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:theme="@style/AppTheme.AppBarOverlay">

    <com.google.android.material.appbar.CollapsingToolbarLayout
      android:id="@+id/toolbar_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fitsSystemWindows="true"
      app:contentScrim="@color/white"
      app:layout_scrollFlags="scroll|exitUntilCollapsed"
      app:toolbarId="@+id/toolbar"
      app:expandedTitleMarginEnd="64dp"
      app:expandedTitleMarginStart="48dp"
      app:expandedTitleTextAppearance="@style/TransparentText">

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:background="@color/searchBarSearchIconTintColor">

        <de.hdodenhof.circleimageview.CircleImageView

          android:id="@+id/profile_pic"
          android:layout_width="200dp"
          android:layout_height="200dp"
          android:contentDescription="@string/todo"
          app:civ_border_width="2dp"
          app:civ_border_color="#FF000000"/>

        <TextView
          android:id="@+id/user_arroba"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/usuario"
          android:textSize="28sp"
          android:textStyle="bold"/>

        <TextView
          android:id="@+id/email_profile_principal"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/correo"
          android:textSize="12sp"
          android:textStyle="bold"/>

      </LinearLayout>

      <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profile"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>
  </com.google.android.material.appbar.AppBarLayout>

  <include layout="@layout/content_profile" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>